--- a/assets/style/_main.less
+++ b/assets/style/_main.less
@@ -18,10 +18,11 @@ section{
     background:white;
     box-shadow:0 1px 3px 5px rgba(153, 68, 68, 0.5);
     border-radius: 3px;
-    text-align: center;
+    align-items: stretch;
 }
 
 .card{
+    
     .col();
     .col-xs-sm(6);
     .col-sm-lg(4);
