--- a/assets/style/style.less
+++ b/assets/style/style.less
@@ -1,4 +1,4 @@
-@import '../less-mixin/less/style.less';
+@import './node_modules/less-query/style.less';
 
 @import './_header.less';
 @import './_any.less';
