--- a/assets/style/_any.less
+++ b/assets/style/_any.less
@@ -1,4 +1,7 @@
 .reset();
+ul li {
+    list-style: none;
+}
 @color-dark:#493d35;
 @color-primary:#944;
 @color-success:#ADE4F2;
@@ -10,7 +13,7 @@ body{
     font-weight: 500;
     display: flex;
     flex-direction: column;
-    .fw-font(14,22);
+    .fz(fw(14px,22px));
     overflow-x: hidden;
     color:@color-dark;
     background: linear-gradient(transparent 50%, rgba(199, 237, 245, .1) 50%, rgba(199, 237, 245, .1)),
@@ -24,19 +27,19 @@ h1,h2,h3{
 }
 
 h1{
-    .fw-font(22,50);
+    .fz(fw(22px,50px));
     .my(12px);
 }
 h2{
-    .fw-font(20,36);
+    .fz(fw(20px,36px));
     .my(10px);
 }
 h3{
-    .fw-font(18,28);
+    .fz(fw(18px,28px));
     .my(8px);
 }
 h4{
-    .fw-font(16,22);
+    .fz(fw(16px,22px));
     .my(6px);
 }
 .scip {
