--- a/assets/style/_main.less
+++ b/assets/style/_main.less
@@ -1,17 +1,70 @@
 main {
     flex-grow: 1;
 }
+
 .main__info{
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     text-align: center;
+    .py(fw(10px,20px));
 }
 
 section{
     .row();
-    .wrapper();
+    .wrp();
+    .py(fw(5px,15px));
+    .card{
+        .col(12, xs, 6, s, 4, l, 3);
+        .my(fw(10px,20px));
+        &__content{
+            .h(100%);
+            .card__content();
+        }
+        &__content-rotate{
+            .card__content();
+            position: relative;
+            transition:transform 0.5s;
+        }
+        &:hover &__content-rotate{
+            transform: rotateY(180deg);
+        }
+        &:hover &__back{
+            background:@color-light;
+            color:@color-dark;
+            z-index:1;
+            opacity:1;
+        }
+        &:hover &__front{
+            background:@color-light;
+            color:@color-light;
+            opacity:0;
+            z-index:-1;
+        }
+        &__back{
+            color:@color-light;
+            transition:0.25s;
+            position: absolute;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+            top: 0;
+            bottom: 0;
+            right: 0;
+            left: 0;
+            background:white;
+            transform: rotateY(180deg);
+            z-index:-1;
+            opacity:0;
+            .p(fw(5,15));
+        }
+        &__front{
+            .p(fw(5,15));
+            transition:0.25s;
+        }
+    }
 }
 
 .card__content(){
@@ -21,57 +74,3 @@ section{
     align-items: stretch;
 }
 
-.card{
-    
-    .col();
-    .col-xs-sm(6);
-    .col-sm-lg(4);
-    .col-lg(3);
-    // .col-xl();
-    .fw-my(5,15);
-    &__content{
-        .card__content();
-    }
-    &__content-rotate{
-        .card__content();
-        position: relative;
-        transition:transform 0.5s;
-    }
-    &:hover &__content-rotate{
-        transform: rotateY(180deg);
-    }
-    &:hover &__back{
-        background:@color-light;
-        color:@color-dark;
-        z-index:1;
-        opacity:1;
-    }
-    &:hover &__front{
-        background:@color-light;
-        color:@color-light;
-        opacity:0;
-        z-index:-1;
-    }
-    &__back{
-        color:@color-light;
-        transition:0.25s;
-        position: absolute;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        text-align: center;
-        top: 0;
-        bottom: 0;
-        right: 0;
-        left: 0;
-        background:white;
-        transform: rotateY(180deg);
-        z-index:-1;
-        opacity:0;
-        .fw-p(5,15);
-    }
-    &__front{
-        .fw-p(5,15);
-        transition:0.25s;
-    }
-}
