--- a/assets/style/_footer.less
+++ b/assets/style/_footer.less
@@ -1,12 +1,11 @@
 footer{
-    background:@color-primary;
+    background: @color-primary;
     color: @color-light;
     display: flex;
     justify-content: space-around;
-    align-items: center;
     .wrp();
 }
-.social {
+.soc{
     &__list {
         display: flex;
         justify-content: space-between;
